fix: btn too big in smaller screens

--- a/styles/buttons/player-btn.css
+++ b/styles/buttons/player-btn.css
@@ -20,6 +20,24 @@
   color: #fff;
   transition: 1s;
 }
+@media (max-width: 420px) {
+  .player-btn-primary, 
+  .player-btn-secondary {
+    width: 50px;
+    height: 50px;
+    border: 6px solid #999;
+    font-size: 25px;
+  }
+}
+@media (max-width: 310px) {
+  .player-btn-primary, 
+  .player-btn-secondary {
+    width: 40px;
+    height: 40px;
+    border: 4px solid #999;
+    font-size: 20px;
+  }
+}
 
 /* ============================================== */
 /* player-btn-primary                             */
@@ -56,6 +74,22 @@
   z-index: -1;
   border-radius: 50%;
 }
+@media (max-width: 420px) {
+  .player-btn-primary:after {
+    width: calc(100% - 4px);
+    height: calc(100% - 4px);
+    left: 2px;
+    top: 2px;
+  }
+}
+@media (max-width: 310px) {
+  .player-btn-primary:after {
+    width: calc(100% - 3px);
+    height: calc(100% - 3px);
+    left: 1.5px;
+    top: 1.5px;
+  }
+}
 .player-btn-primary:hover{
   background: var(--hover-color);
 }
@@ -67,6 +101,18 @@
   background: var(--hover-color);
   font-size: 55px;
   transition: 0.1s;
+}
+@media (max-width: 420px) {
+  .player-btn-primary:active,
+  .player-btn-secondary:active { /* player-btn-secondary  */
+    font-size: 30px;
+  }
+}
+@media (max-width: 310px) {
+  .player-btn-primary:active,
+  .player-btn-secondary:active { /* player-btn-secondary  */
+    font-size: 25px;
+  }
 }
 @keyframes rotate {
   to {
@@ -105,8 +151,18 @@
 /* player-choose                                  */
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 .player-choose {
-  height: 80px;
   padding: 0px;
   border: 6px solid var(--btn-color);
 }
+@media (max-width: 420px) {
+  .player-choose {
+    border: 4px solid var(--btn-color);
+  }
+}
+@media (max-width: 310px) {
+  .player-choose {
+    border: 3px solid var(--btn-color);
+  }
+}
+
 
